# data-pipelines

./: .env.prod.secret  .env.secret  .gitignore  Makefile  deploy.sh  docker-compose.yaml  pyproject.toml
libraries/api-wrappers/: .gitignore  Makefile  README.md  api-credentials.json.secret  pyproject.toml  setup.py
libraries/api-wrappers/.github/workflows/: python-package.yml
libraries/api-wrappers/api_wrappers/errors/: __init__.py  errors.py
libraries/api-wrappers/api_wrappers/generic/: sheets.py  test_sheets.py
libraries/api-wrappers/api_wrappers/google/: __init__.py
libraries/api-wrappers/api_wrappers/google/google_drive/: __init__.py  google_drive.py  test_google_drive.py
libraries/api-wrappers/api_wrappers/google/google_sheets/: __init__.py  google_sheets.py  test_get_product_data_from_sheets.yaml  test_google_sheets.py
libraries/api-wrappers/api_wrappers/google/shared/: .gitignore  __init__.py  api-credentials.json.secret  login.py  test_login.py
libraries/api-wrappers/api_wrappers/lozuka/: __init__.py
libraries/api-wrappers/api_wrappers/lozuka/lozuka_api/: __init__.py  caller.py  test_caller.py  test_transform.py  transform.py
libraries/api-wrappers/api_wrappers/metro/scraper/: __init__.py  run.py  scraper.py  test_scraper.py
services/airflow/: .env.prod.secret  .env.secret  .gitignore  Makefile  README.md  airflow.cfg  airflow.cfg.secret  deploy.sh  docker-compose.yaml  pyproject.toml
services/airflow/dags/: conftest.py
services/airflow/dags/airflow_fp/: airflow_fp.py
services/airflow/dags/generic_google_product_imports/: dag.py  dag_integration_test.py  types.py
services/airflow/dags/generic_google_product_imports/config_files/: shop_287.yaml
services/airflow/dags/generic_google_product_imports/sync_images/: sync_images.py  test_sync_images.py
services/airflow/dags/generic_google_product_imports/sync_products/: shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/dags/hello_world/: hello_world.py
services/airflow/dags/helpers/dag_helpers/: __init__.py  download_helpers.py  test_notify_slack.py
services/airflow/dags/order_notifications/: dag.py  notify.py  test_dag.py
services/airflow/dags/shop_287/: dag.py  shop-secrets.json.secret  sync.py  sync_images.py  test_sync.py  test_sync_images.py
services/airflow/dags/shop_381/: dag.py  shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/dags/shop_390/: dag.py  shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/dags/shop_391/: dag.py  shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/dags/shop_398/: dag.py  shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/dags/shop_405/: dag.py  erorrs.py  shop-secrets.json.secret  sync.py  test_sync.py  test_sync_405.py
services/airflow/dags/shop_407/: dag.py  shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/dags/shop_412/: dag.py  shop-secrets.json.secret  sync.py  test_sync.py
services/airflow/docker/airflow/: Dockerfile
services/airflow/docker/nginx/: nginx.conf
(+88 files in other folders)
