[tool.poetry]
name = "api-wrappers"
version = "0.1.0"
description = "api wrappers for product imports with lozuka"
authors = ["Jakob J. Kolb <jakob.j.kolb@gmail.com> and Kilian Zimmerer <kilian.zimmerer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
returns = "^0.16.0"
pandas = "^1.2.4"
gspread = "^3.7.0"
PyDrive2 = "^1.8.3"
ramda = "^2021.10.24"
requests = "^2.25.1"
setuptools = "^57.0.0"
pytest-recording = "^0.12.0"
slate3k = "^0.5.3"
beautifulsoup4 = "^4.10.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
pytest = "^6.2.4"
pytest-xdist = "^2.3.0"
responses = "^0.13.3"
jsondiff = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[package]
include = ["src/**/*.py"]

[tool.pytest]
looponfailroots="api-wrappers, tests"

[tool.black]
line-length = 120
